k8s/overlays/dev/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrappedup-backend
spec:
  template:
    spec:
      containers:
        - name: wrappedup-backend
          image: ghcr.io/guillermorivero/wrappedup-backend:dev
---
apiVersion: v1
kind: Service
metadata:
  name: wrappedup-backend-service
spec:
  type: LoadBalancer
